--- a/EvaluateImage/func.yaml
+++ b/EvaluateImage/func.yaml
@@ -1,7 +1,7 @@
 schema_version: 20180708
 name: evaluateimage
-version: 0.0.11
-runtime: node
+version: 0.0.19
+runtime: docker
 entrypoint: node func.js
 triggers:
 - name: evaluateimage
