--- a/OpenTicket/func.yaml
+++ b/OpenTicket/func.yaml
@@ -1,7 +1,7 @@
 schema_version: 20180708
 name: openticket
-version: 0.0.13
-runtime: node
+version: 0.0.20
+runtime: docker
 entrypoint: node func.js
 triggers:
 - name: openticket
