--- a/OpenTicket/package.json
+++ b/OpenTicket/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hellofn",
+	"name": "OpenTicket",
 	"version": "1.0.0",
 	"description": "example function",
 	"main": "func.js",
@@ -7,6 +7,6 @@
 	"license": "Apache-2.0",
 	"dependencies": {
 		"@fnproject/fdk": ">=0.0.15",
-		"request": "^2.88.0",
+		"request": "^2.88.0"
 	}
 }
