--- a/EvaluateImage/package.json
+++ b/EvaluateImage/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "hellofn",
-    "version": "1.0.0",
+	"version": "1.0.0",
 	"description": "example function",
 	"main": "func.js",
 	"author": "",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"@fnproject/fdk": ">=0.0.15"
+		"@fnproject/fdk": ">=0.0.15",
+		"fs": "0.0.1-security"
 	}
 }
