--- a/EvaluateImage/package.json
+++ b/EvaluateImage/package.json
@@ -7,6 +7,7 @@
 	"license": "Apache-2.0",
 	"dependencies": {
 		"@fnproject/fdk": ">=0.0.15",
-		"fs": "0.0.1-security"
+		"fs": "0.0.1-security",
+		"node-fetch": "^2.6.0"
 	}
 }
