--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Functions for Public Safety 2.0 demo.",
   "main": "PullAndCheck/func.js",
   "dependencies": {
-    "oracledb": "^3.1.2"
+    "oracledb": "^3.1.2",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
